# code-z-cli

./: .coveragerc  .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  RELEASE_CHECKLIST.md  __main__.py  build_grammars.sh  build_language_lib.py  build_package.py  cli.py  mode_manager_cli.py  package-lock.json  pyproject.toml  pytest.ini  release.sh  requirements.txt  run_codez.sh  setup.py  test_installation.py  test_local_install.sh  update_submodules.sh  version_utils.py
codechat/: __init__.py  __main__.py  cli.py  version_utils.py
codechat/data/: session_repository.py
codechat/docs/: TECHNICAL.md
codechat/domain/: conversation.py
codechat/events/: README.md  event_bus.py  types.py
codechat/interface/: cli.py
core/: __init__.py  context_manager.py  io_utils.py  licensing.py  llm_interactive.py  llm_interactive_demo.py  mode_manager.py  model.py  parser.py  project_analyzer.py  repl.py  repl_utils.py  session_utils.py  sqlite_memory.py  stream_utils.py  system_prompts.py  user_config.py
prompts/: ask_system_prompt.txt  assist_system_prompt.txt
src/: backup_manager.py  code_modifier.py  diff_engine.py  permission_manager.py
tests/: test_backup_manager.py  test_code_modifier.py  test_diff_engine.py  test_llm_interactive.py  test_mode_manager.py  test_mode_manager_llm.py  test_ollama_models.py  test_permission_manager.py
tests/core/: test_llm_context.py  test_llm_interactive.py
tests/data/: test_session_repository.py
tests/domain/: test_conversation.py
tests/events/: test_event_bus.py
tests/interface/: test_cli.py
