[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codez-cli"
version = "0.3.0"
description = "CodeZ CLI – When AI Takes a Break, We Don’t!"
readme = "README.md"
authors = [
    { name="Sadat Sayem", email="scode43@gmail.com" },
]
dependencies = [
    "rich>=14.0.0",
    "prompt_toolkit>=3.0.0",
    "platformdirs>=4.2.0",
    "tree-sitter>=0.20.1",
    "typer>=0.16.0",
    "ollama>=0.5.1",
    "pyfiglet>=0.8.post1",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
]
requires-python = ">=3.8"

[project.scripts]
codez = "codechat.__main__:main"  # Corrected entry point